# libosmio-loader

./: .gitmodules  CMakeLists.txt
include/: tables.h
lib/: loader.cpp  structures.h
platform/: CMakeLists.txt
platform/unix/: CMakeLists.txt
platform/unix/include/: entrypoint.h
platform/unix/lib/: CMakeLists.txt
platform/unix/src/: icd_json.cpp  icd_json.h  loader_functions.cpp  version.h
src/: handles.h  icd.h  icd_redirect.cpp
test/: CMakeLists.txt
test/platform/unix/: CMakeLists.txt
test/platform/unix/list_icd/: list_icd.cpp
test/platform/unix/load_icd/: load_icd.cpp
